# KBase

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.lite.yml  docker-compose.standard.yml  entrypoint.sh  pyproject.toml
.claude/: launch.json
config/: kbase.standard.yaml  kbase.yaml
docs/: MAC-QUICKSTART.md
docs/briefing/: KBase-汇报文档.md  slides.html  演示脚本.md
docs/manual/: KBase-完整手册.md  运维手册.md
eval/: questions.jsonl  report-tiers.md  run_eval.py
kbase/: audit.py  bulk_import.py  chunk_admin.py  config.py  connectors.py  conversations.py  db.py  demo_data.py  doc_delete.py  doc_images.py  email_templates.py  embed_text.py  embedder_keys.py  errors.py  evals.py  feedback.py  feishu.py  feishu_bot.py  i18n_store.py  kb_acl.py  license.py  mailer.py  metrics.py  migrations.py  model_catalog.py  models.py  providers_store.py  qa_stats.py  reindex.py  retrieval_strategy.py  vlm_parse.py
kbase/api/: lazy.py  main.py  schemas.py  services.py  static.py
kbase/auth/: bootstrap.py  deps.py  oidc.py  security.py
kbase/index/: factory.py  keyword.py  keyword_pg.py  tokenize.py
kbase/ingest/: pdf_odl.py  pipeline.py
kbase/jobs/: digest.py  export_docx.py  proposal.py  runner.py  store.py
kbase/plugins/: base.py  registry.py
kbase_mcp/: __main__.py  server.py
loadtest/: locustfile.py  report-standard.md
scripts/: backup.py  deploy_standard_gcp.md  dev_app.py  gen_license.py  i18n_machine_translate.py
tests/: conftest.py  test_account_email_password.py  test_api.py  test_attach_cap.py  test_audit.py  test_auth.py  test_auth_api_keys.py  test_auth_bootstrap.py  test_auth_deps.py  test_auth_security.py  test_backup.py  test_bulk_import.py  test_chroma_store.py  test_chunk_admin.py  test_chunker.py  test_citation_page.py  test_config.py  test_connectors.py  test_conversation_ownership.py  test_conversations.py  test_demo_data.py  test_deploy_artifacts.py  test_digest_export.py  test_doc_images.py  test_doc_images_docx.py  test_email_templates.py  test_embedder.py  test_embedder_keys.py  test_embedder_options.py  test_enricher.py  test_evals.py  test_feedback.py  test_feishu.py  test_feishu_bot.py  test_generator.py  test_glm_ocr.py  test_hybrid_retriever.py  test_i18n.py  test_ingest.py  test_job_runner.py  (+42 more)
web/: admin.html  app.js  index.html  widget.js
web-app/: admin.html  components.json  index.html  package-lock.json  package.json  vite.config.ts
(+849 files in other folders)
