[project]
name = "kbase"
version = "0.1.0"
description = "KBase 私有化知识库系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "chromadb>=0.5",
    "markitdown[docx,pptx,xlsx,pdf]>=0.1",
    "langchain-text-splitters>=0.3",
    "openai>=1.40",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
local-embed = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["external: 需要网络或大模型下载，默认跳过"]
addopts = "-m 'not external'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kbase"]
