[project]
name = "kbase"
version = "0.1.0"
description = "KBase 私有化知识库系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "chromadb>=0.5",
    "qdrant-client>=1.10",
    "markitdown[docx,pptx,xlsx,pdf]>=0.1",
    "langchain-text-splitters>=0.3",
    "openai>=1.40",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "jieba>=0.42",
    "pypdf>=4.0",
    "httpx>=0.27",
    "python-docx>=1.1",
    # 多模态插图（提取/尺寸过滤/演示流程图生成）必须在主依赖——曾只在
    # dev extra，生产镜像装不上会让插图功能静默失效（提图 try/except 吞掉）
    "pillow>=10",
    "passlib[bcrypt]>=1.7",
    # bcrypt>=4.1 移除了 passlib 1.7.4 探测版本时读取的 __about__ 属性，
    # 触发其 wrap-bug 探测路径抛 ValueError（与内容无关，任何密码都会炸）；
    # 锁定 <4.1 保留兼容性，同时满足 chromadb 的 bcrypt>=4.0.1 下限。
    "bcrypt>=4.0.1,<4.1",
    "PyJWT>=2.8",
    # kbase/license.py 的 Ed25519 验签直接依赖；此前只是通过 markitdown[pdf]
    # ->pdfminer.six 间接拉入，改成显式声明避免那条传递链变化时悄悄消失。
    "cryptography>=42.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
local-embed = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
mcp = ["mcp>=1.2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "external: 需要网络或大模型下载，默认跳过",
    "pg: 需要真实 PostgreSQL（设置 KBASE_TEST_PG_URL 才跑），默认跳过",
]
addopts = "-m 'not external and not pg'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kbase", "kbase_mcp"]
